# steam-workshop-utility

./: .gitignore  Cargo.toml  README.md  build.rs  package-lock.json  package.json
.github/workflows/: release.yml
src/: app.rs  build.rs  icons.rs  main.rs  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/steam/: api.rs  collection.rs  cookies.rs  library.rs  mod.rs  types.rs  workshop_auth.rs
src/lib/: Divider.svelte  GameCard.svelte  ModCard.svelte  ModList.svelte  Sidebar.svelte  Titlebar.svelte  Topbar.svelte  steam.ts  types.ts
src/lib/icons/: GravityUiChevronDown.svelte  IconamoonArrowBottomLeft5CircleLight.svelte  IconamoonArrowLeft2.svelte  IconamoonArrowRight2.svelte  IconamoonArrowTopRight5CircleLight.svelte  IconamoonCheck.svelte  IconamoonClose.svelte  IconamoonFolderFill.svelte  IconamoonScreenFull.svelte  IconamoonSearch.svelte  IconamoonSignMinusFill.svelte  IconamoonSynchronize.svelte  IconamoonTrashSimpleFill.svelte  LsiconDensitySFilled.svelte  MaterialSymbolsChromeMinimizeRounded.svelte  MdiGamepadCircle.svelte  MdiSteam.svelte  index.ts
src/lib/ui/: Checkbox.svelte  Dropdown.svelte  Searchbar.svelte
src/routes/: +page.svelte
src/steam/: api.rs  cookies.rs  library.rs  mod.rs
src/types/: types.rs
src/utils/: general.rs  mod.rs  slint.rs  ui.rs
ui/: appwindow.slint  theme.slint
ui/components/: boxes.slint  cards.slint  checkbox.slint  container.slint  data.slint  divider.slint  icon_button.slint  loading_screen.slint  nav_button.slint  progress_bar.slint  search_bar.slint  sidebar.slint  switch_button.slint  titlebar.slint  tooltip.slint  topbar.slint
