[package]
name = "steam-workshop-utility"
version = "0.5.0"
edition = "2024"
license = "GPL-3.0"
description = "A Steam Workshop utility for the COSMIC™ desktop"
repository = "https://github.com/pop-os/cosmic-app-template"

[dependencies]
# Async runtime
tokio = { version = "1.48.0", features = ["full"] }

# Error handling
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }

# Vdf parsing
keyvalues-parser = "0.2.4"

# Filesystem / OS utilities
dirs = "6.0.0"              # Finds home dir, config dir, etc.

# HTTP client for Steam Web API
reqwest = { version = "0.13", features = ["json", "form"] }

# Opening URLs (steam:// URIs and workshop pages)
open = "5.3.2"
chrono = "0.4.44"
serde_json = "1.0.149"

# COSMIC UI framework
[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
features = [
    "about",           # About widget
    "single-instance", # Focus existing instance if already open
    "wgpu",            # GPU-accelerated rendering
    "xdg-portal",      # xdg portal dialogs on Linux
]

# Uncomment to test a locally-cloned libcosmic:
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }