[package]
name = "steam-workshop-utility"
version = "0.7.4"
edition = "2024"
license = "GPL-3.0"
description = "A Steam Workshop utility for the COSMIC™ desktop"
repository = "https://github.com/Arcadyi/steam-workshop-utility"

[features]
xdg-portal = ["libcosmic/xdg-portal"]

[dependencies]
# Async runtime
tokio = { version = "1.48.0", features = ["full"] }

# Error handling
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }

# Vdf parsing
keyvalues-parser = "0.2.4"

# Filesystem / OS utilities
dirs = "6.0.0"              # Finds home dir, config dir, etc.

# HTTP client for Steam Web API
reqwest = { version = "0.13", features = ["json", "form"] }

# Opening URLs (steam:// URIs and workshop pages)
open = "5.3.2"
chrono = "0.4.44"
serde_json = "1.0.149"
base64 = "0.22.1"
rusqlite = { version = "0.39.0", features = ["bundled", "backup"] }
aes-gcm = "0.11.0-rc.3"
aead = "0.6.0-rc.10"

[target.'cfg(not(target_os = "windows"))'.dependencies]
aes = "0.9.0"
cbc = { version = "0.2.1", features = ["alloc"] }
pbkdf2 = { version = "0.13.0", features = ["hmac"] }
sha1 = "0.11.0"


[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }
windows = { version = "0.62.2", features = [
    "Win32_Security_Cryptography",
    "Win32_System_Memory",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_SystemServices",
] }

# COSMIC UI framework
[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
features = [
    "about",           # About widget
    "single-instance", # Focus existing instance if already open
    "wgpu",            # GPU-accelerated rendering
    # xdg-portal is Linux-only, enabled via --features xdg-portal in the build
]

[build-dependencies]
winresource = "0.1.31"

[patch."https://github.com/wash2/accesskit"]
accesskit = { git = "https://github.com/pyroraptor07/accesskit", branch = "iced-0.14" }
accesskit_winit = { git = "https://github.com/pyroraptor07/accesskit", branch = "iced-0.14" }

# Uncomment to test a locally-cloned libcosmic:
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }