[package]
name = "steam-workshop-utility"
version = "0.8.0"
edition = "2024"
license = "GPL-3.0"
description = "A Steam Workshop utility for the COSMIC™ desktop"
repository = "https://github.com/Arcadyi/steam-workshop-utility"


[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.48.0", features = ["full"] }
anyhow = "1.0"
keyvalues-parser = "0.2.4"
dirs = "6.0.0"
reqwest = { version = "0.13", features = ["json", "form"] }
open = "5.3.2"
chrono = "0.4.44"
base64 = "0.22.1"
rusqlite = { version = "0.39.0", features = ["bundled", "backup"] }
aes-gcm = "0.11.0-rc.3"
aead = "0.6.0-rc.10"

[target.'cfg(not(target_os = "windows"))'.dependencies]
aes = "0.9.0"
cbc = { version = "0.2.1", features = ["alloc"] }
pbkdf2 = { version = "0.13.0", features = ["hmac"] }
sha1 = "0.11.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }
windows = { version = "0.62.2", features = [
    "Win32_Security_Cryptography",
    "Win32_System_Memory",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_SystemServices",
] }
